--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -21,6 +21,7 @@
 # Android operating system, and which are packaged with your app's APK
 # https://developer.android.com/topic/libraries/support-library/androidx-rn
 android.useAndroidX=true
+kotlin_version=1.5.31
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
 
